--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r scraper/requirements.txt
 
       - name: Run scraper
         run: python scraper/playwright_scraper.py
