--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -41,7 +41,12 @@ jobs:
           TARGET_URL: ${{ github.event.inputs.url }}
           USE_LAZY: ${{ github.event.inputs.lazy }}
 
-      - name: Upload results
+      - name: Save scraped output
+        run: |
+          mkdir -p output
+          python scraper/playwright_scraper.py > output/scraper.log
+          grep "Grabbed .* picture[s]*: " output/scraper.log | sed -E 's/.*: (.+)$/\1/' > output/images.txt
+      - name: Upload scraped artifact
         uses: actions/upload-artifact@v4
         with:
           name: scraped-output
